# wordle-solver

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
assets/: dictionary.txt
src/: lib.rs  main.rs  solver.rs
tests/: load_assets.rs  real_life.rs  solver.rs
