[package]
name = "wordle-solver"
version = "0.1.1"
edition = "2021"
rust-version = "1.56.1"
description = "A library and a program to solve the daily wordle"
license = "MIT"
keywords = ["wordle", "puzzle", "game", "solver"]
repository = "https://github.com/jeteve/wordle-solver"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 assets_manager = "0.7.2"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
 regex = "1.5.4"
 clap = { version = "3.0.14" , features = ["derive"]}

